--- a/src/pages/HomePage.module.css
+++ b/src/pages/HomePage.module.css
@@ -2,6 +2,24 @@
   background-color: red;
 }
 
+.divtest {
+  height: 80%;
+}
+
+.text {
+  font-size: 12px;
+}
+
 .text_center {
   text-align: center;
+}
+
+.container {
+  display: flex;
+  gap: 10px;
+}
+
+.card {
+  width: 300px;
+  height: 500px;
 }
