--- a/src/pages/Login.module.css
+++ b/src/pages/Login.module.css
@@ -1,10 +1,4 @@
-.login_form {
-  text-align: center;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 1rem;
-}
+
 
 .input {
   height: 2rem;
@@ -29,24 +23,6 @@
   background-color: darkblue;
 }
 
-.loginContainer {
-  background-color: black;
-  flex-direction: column;
-  display: flex;
-  justify-content: center;
-  border: 2px solid grey;
-  border-radius: 25px;
-  height: 50vh;
-}
-
-.loginMainDiv {
-  display: flex;
-  justify-self: center;
-  background-color: green;
-  gap: 50px;
-  align-items: center;
-}
-
 main {
   height: 100vh;
   display: flex;
@@ -54,13 +30,16 @@ main {
   align-items: center;
 }
 
+.wrapper {
+  display: flex;
+  width: 700px;
+}
+
 .imageDiv {
   display: flex;
-  /* flex-direction: column;
-  flex: 1; */
-  width: 300px;
+  flex:1;
   background-color: red;
-  min-height: 60vh;
+  aspect-ratio: 10/16 ;
 }
 
 img {
@@ -68,3 +47,23 @@ img {
   width: 100%;
   object-fit: cover;
 }
+
+.loginContainer {
+  display: flex;
+  flex:1;
+  justify-content: center;
+  align-items: center;
+}
+
+Form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 80%;
+  gap: 1rem;
+  background-color: lightgray;
+  padding: 8px;
+  border-radius: 16px;
+}
+
