--- a/src/components/VideoCard.module.css
+++ b/src/components/VideoCard.module.css
@@ -3,8 +3,9 @@
   flex-direction: column;
   width: 100%;
   aspect-ratio: 10/16;
-  border: 1px solid;
-  border-radius: 10px;
+  /* border: 1px solid grey; */
+  box-shadow: 0px 0px 10px rgb(106, 105, 105);
+  border-radius: 12px;
   position: relative;
   overflow: hidden;
 }
@@ -20,6 +21,8 @@
   display: flex;
   flex: 1;
   padding: 6px;
+  background-color: rgba(255, 255, 255, 0.15);
+  backdrop-filter: blur(2px);
 }
 
 .footerLeft {
@@ -45,8 +48,9 @@
 }
 
 .videoTitle {
-  font-size: 14px;
-  font-weight: 500;
+  font-size: 16px;
+  font-weight: bold;
+  color: rgb(0, 0, 0);
 }
 
 .videoClip {
