--- a/src/pages/HomePage.module.css
+++ b/src/pages/HomePage.module.css
@@ -1,7 +1,3 @@
-.test {
-  background-color: red;
-}
-
 .divtest {
   height: 80%;
 }
@@ -17,6 +13,9 @@
 .container {
   display: flex;
   gap: 10px;
+  align-items: center;
+  flex-direction: column;
+  padding: 24px;
 }
 
 .card {
