--- a/src/components/Follower.module.css
+++ b/src/components/Follower.module.css
@@ -17,3 +17,10 @@
 .followerDiv:hover {
   background: red;
 }
+
+.singleFollower {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  width: 500px;
+}
