--- a/src/index.css
+++ b/src/index.css
@@ -5,10 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: red;
-  display: flex;
-  height: 100%;
-  flex-direction: column;
+  background-color: white;
 }
 
 code {
