--- a/src/components/VideoCard.module.css
+++ b/src/components/VideoCard.module.css
@@ -61,3 +61,15 @@
   height: 100%;
   object-fit: cover;
 }
+
+.playVideoClass {
+  opacity: 0;
+  scale: 0;
+  transition: all 0.5s;
+}
+
+.pauseVideoClass {
+  opacity: 100;
+  scale: 1;
+  transition: all 0.5s;
+}
