--- a/src/components/VideoCard.module.css
+++ b/src/components/VideoCard.module.css
@@ -3,7 +3,6 @@
   flex-direction: column;
   width: 100%;
   aspect-ratio: 10/16;
-  /* border: 1px solid grey; */
   box-shadow: 0px 0px 10px rgb(106, 105, 105);
   border-radius: 12px;
   position: relative;
@@ -78,4 +77,10 @@
   opacity: 100;
   scale: 1;
   transition: all 0.5s;
+}
+
+.footerUser p:hover {
+  cursor: pointer;
+  text-decoration: underline;
+  font-weight: 600;
 }
