--- a/src/components/TopNavigation.module.css
+++ b/src/components/TopNavigation.module.css
@@ -28,3 +28,24 @@
   height: 75px;
   justify-content: center;
 }
+
+.divList {
+  background-color: white;
+  border: 1px solid grey;
+  border-radius: 25px;
+}
+
+.listStyle {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  gap: 10px;
+}
+
+.popUpSearchDiv {
+  left: 0px;
+  top: 50px;
+  position: absolute;
+  width: 300px;
+  z-index: 1;
+}
