update - bug fixes

--- a/src/components/LayoutLeft.module.css
+++ b/src/components/LayoutLeft.module.css
@@ -72,3 +72,27 @@
   padding: 0;
   font-size: 14px;
 }
+
+.tooltip {
+  position: relative;
+  display: inline-block;
+}
+
+.tooltip .tooltiptext {
+  visibility: hidden;
+  width: 120px;
+  color: #fff;
+  text-align: center;
+  border: 1px solid ligthblue;
+  background-color: lightblue;
+  border-radius: 25px;
+  padding: 5px 0;
+  position: absolute;
+  z-index: 1;
+  left: 105%;
+}
+
+.tooltip:hover .tooltiptext {
+  visibility: visible;
+  color: white;
+}
