--- a/src/components/ListItemDropdown.module.css
+++ b/src/components/ListItemDropdown.module.css
@@ -6,3 +6,10 @@
   text-decoration: underline;
   font-weight: 600;
 }
+
+.listItem {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+  padding-left: 10px;
+}
