--- a/src/components/VideoCard.module.css
+++ b/src/components/VideoCard.module.css
@@ -9,19 +9,27 @@
   overflow: hidden;
 }
 
+.videoDiv {
+  display: flex;
+  flex: 1;
+  position: relative;
+  cursor: pointer;
+}
+
 .videoFooter {
   display: flex;
   width: 100%;
   position: absolute;
   bottom: 0;
+  background-color: rgba(255, 255, 255, 0.15);
+  backdrop-filter: blur(2px);
+  flex-direction: column;
 }
 
 .footerContainer {
   display: flex;
   flex: 1;
   padding: 6px;
-  background-color: rgba(255, 255, 255, 0.15);
-  backdrop-filter: blur(2px);
 }
 
 .footerLeft {
@@ -32,6 +40,20 @@
 
 .footerLeft p {
   margin: 0;
+}
+
+.iconsDiv {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  right: 2%;
+  top: 40%;
+  gap: 20px;
+}
+
+.singleIconDiv {
+  display: flex;
+  flex-direction: column;
 }
 
 .footerRight {
@@ -53,6 +75,8 @@
   font-size: 16px;
   font-weight: bold;
   color: rgb(0, 0, 0);
+  padding-left: 8px;
+  padding-top: 8px;
 }
 
 .compactVideoTitle {
@@ -83,4 +107,16 @@
   cursor: pointer;
   text-decoration: underline;
   font-weight: 600;
+}
+
+.videoPlayIconDiv {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
 }
