--- a/src/components/LayoutLeft.module.css
+++ b/src/components/LayoutLeft.module.css
@@ -114,14 +114,14 @@
   animation: spin 2s linear infinite;
 }
 
-@-webkit-keyframes spin {
+/* @-webkit-keyframes spin {
   0% {
     -webkit-transform: rotate(0deg);
   }
   100% {
     -webkit-transform: rotate(360deg);
   }
-}
+} */
 
 @keyframes spin {
   0% {
