--- a/src/components/VideoCard.module.css
+++ b/src/components/VideoCard.module.css
@@ -13,7 +13,6 @@
   display: flex;
   flex: 1;
   position: relative;
-  cursor: pointer;
 }
 
 .videoFooter {
@@ -54,6 +53,7 @@
 .singleIconDiv {
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 
 .footerRight {
@@ -83,6 +83,7 @@
   font-size: 12px;
   font-weight: bold;
   color: rgb(0, 0, 0);
+  padding: 8px;
 }
 
 .videoClip {
@@ -119,4 +120,9 @@
   width: 100%;
   height: 100%;
   pointer-events: none;
+}
+
+.boldText {
+  font-size: 14px;
+  color: white;
 }
