--- a/src/components/VideoCard.module.css
+++ b/src/components/VideoCard.module.css
@@ -77,6 +77,11 @@
   color: rgb(0, 0, 0);
   padding-left: 8px;
   padding-top: 8px;
+  cursor: pointer;
+}
+
+.videoTitle:hover {
+  text-decoration: underline;
 }
 
 .compactVideoTitle {
@@ -84,6 +89,11 @@
   font-weight: bold;
   color: rgb(0, 0, 0);
   padding: 8px;
+  cursor: pointer;
+}
+
+.compactVideoTitle:hover {
+  text-decoration: underline;
 }
 
 .videoClip {
