--- a/src/pages/HomePage.module.css
+++ b/src/pages/HomePage.module.css
@@ -68,7 +68,7 @@
   -webkit-animation: spin 2s linear infinite;
   animation: spin 2s linear infinite;
 }
-
+/* 
 @-webkit-keyframes spin {
   0% {
     -webkit-transform: rotate(0deg);
@@ -76,7 +76,7 @@
   100% {
     -webkit-transform: rotate(360deg);
   }
-}
+} */
 
 @keyframes spin {
   0% {
