--- a/src/components/SingleVideo.module.css
+++ b/src/components/SingleVideo.module.css
@@ -1,40 +1,43 @@
 .mainDiv {
   display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   gap: 10px;
 }
 
 .content {
   margin-top: 24px;
-  width: 500px;
+  width: 400px;
 }
 
 .commentsDiv {
   display: flex;
   flex-direction: column;
   flex: 1;
-  margin-top: 24px;
-  border: 2px solid lightblue;
 }
 
 .singleComment {
   display: flex;
   margin: 10px;
-  width: 95%;
-  height: 70px;
-  border: 1px solid black;
+  width: 98%;
+  height: 125px;
 }
 
 .divAvatar {
-  height: 100%;
-  width: 10%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 50%;
+  width: 5%;
 }
 
 .divUserComment {
   display: flex;
   flex-direction: column;
+  gap: 2px;
   height: 100%;
-  width: 90%;
-  background-color: pink;
+  width: 100%;
 }
 
 .usernameDate {
@@ -42,8 +45,65 @@
   gap: 15px;
 }
 
-.textForComment {
+.textUsername {
+  font-weight: bold;
   font-size: 12px;
+}
+
+.textDate {
+  font-size: 12px;
+}
+
+.textForComment {
+  display: inline-block;
+  flex: 1;
+  font-size: 14px;
+}
+
+.textIcons {
+  display: flex;
+  font-size: 14px;
+  gap: 10px;
+}
+
+.writeComment {
+  display: flex;
+  flex-direction: column;
+  margin-top: 24px;
+  width: 100%;
+  height: 100px;
+}
+
+.newComment {
+  height: 55%;
+  width: 90%;
+}
+
+.newAvatarComment {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 50%;
+  width: 5%;
+}
+
+.submitComment {
+  display: flex;
+  margin-left: auto;
+}
+
+.buttonSubmitComment {
+  color: white;
+  background-color: lightblue;
+  border: 2px solid lightblue;
+  border-radius: 25px;
+  transition: all 0.35s;
+}
+
+.buttonSubmitComment:hover {
+  cursor: pointer;
+  scale: 1.15;
+  transition: all 0.35s;
 }
 
 .loaderSpinnerWrapper {
