--- a/src/components/LayoutLeft.module.css
+++ b/src/components/LayoutLeft.module.css
@@ -15,19 +15,22 @@
   font-size: 12px;
 }
 
+.contentDiv {
+  display: flex;
+  gap: 10;
+  margin-top: 24px;
+  flex-direction: column;
+}
+
 .userDiv {
   display: flex;
   align-items: center;
   justify-content: center;
   gap: 10px;
-  cursor: pointer;
   border-radius: 25px;
   padding: 8px;
   height: 35px;
-}
-
-.userDiv:hover {
-  background-color: #ede8e8;
+  margin-left: 24px;
 }
 
 .mainLayout {
@@ -36,13 +39,6 @@
   background-color: #fafafa;
   flex-direction: column;
   align-items: center;
-}
-
-.contentDiv {
-  display: flex;
-  gap: 10;
-  margin-top: 24px;
-  flex-direction: column;
 }
 
 .followersDiv {
@@ -73,28 +69,19 @@
   font-size: 14px;
 }
 
-.tooltip {
+.username {
+  font-weight: 500;
+}
+
+.username:hover {
+  text-decoration: underline;
+  scale: 1.01;
+  cursor: pointer;
+}
+
+.circleIcon {
   position: relative;
   display: inline-block;
-}
-
-.tooltip .tooltiptext {
-  visibility: hidden;
-  width: 120px;
-  color: #fff;
-  text-align: center;
-  border: 1px solid ligthblue;
-  background-color: lightblue;
-  border-radius: 25px;
-  padding: 5px 0;
-  position: absolute;
-  z-index: 1;
-  left: 105%;
-}
-
-.tooltip:hover .tooltiptext {
-  visibility: visible;
-  color: white;
 }
 
 .loaderSpinnerWrapper {
