--- a/frontend/src/components/VideoCard.module.css
+++ b/frontend/src/components/VideoCard.module.css
@@ -136,3 +136,10 @@
   font-size: 14px;
   color: white;
 }
+
+.removeVideo {
+  position: absolute;
+  right: 0;
+  margin-top: 8px;
+  margin-right: 8px;
+}
