--- a/frontend/src/components/TopNavigation.module.css
+++ b/frontend/src/components/TopNavigation.module.css
@@ -60,11 +60,11 @@
 .buttonStyle:hover {
   cursor: pointer;
   border-radius: 25px;
-  border: 2px solid lightblue;
+  border: 3px solid lightblue;
   height: 40px;
   width: 80px;
 }
 
-.test {
+.spaceDiv {
   flex: 1;
 }
