--- a/frontend/src/components/AddNewVideo.module.css
+++ b/frontend/src/components/AddNewVideo.module.css
@@ -10,6 +10,37 @@
   width: 40%;
 }
 
+.formTitleText {
+  margin-top: 16px;
+  font-weight: 700;
+  font-size: 24px;
+}
+
+.contentDiv {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  margin-top: 12px;
+}
+
+.titleDiv {
+  display: flex;
+  gap: 10px;
+}
+
+.titleLabel {
+  align-self: center;
+  font-size: 20px;
+  font-weight: 700;
+  margin-bottom: 4px;
+}
+
+.titleInput {
+  border: 2px solid lightblue;
+  border-radius: 25px;
+  padding: 8px;
+}
+
 .inputFile {
   display: flex;
   align-self: left;
@@ -37,19 +68,13 @@
   background-color: lightblue;
   border-radius: 25px;
   border: 0px solid;
-  padding: 8px;
+  padding: 12px;
   transition: all 0.25s ease-in-out;
 }
 
 .buttonUpload:hover {
   cursor: pointer;
   scale: 1.1;
-}
-
-.titleInput {
-  width: 65%;
-  margin-top: 0px;
-  border: 2px solid lightblue;
 }
 
 .hiddenInput {
