--- a/frontend/src/components/TopNavigation.module.css
+++ b/frontend/src/components/TopNavigation.module.css
@@ -3,13 +3,14 @@
   height: 75px;
   width: 100%;
   align-items: center;
-  border-bottom: 4px solid lightblue;
+  border-bottom: 2px solid lightblue;
 }
 
 .buttonDiv {
   display: flex;
   flex: 1;
   justify-content: center;
+  gap: 10px;
 }
 
 .searchDiv {
@@ -54,15 +55,17 @@
 .buttonStyle {
   border: 0;
   background-color: transparent;
+  border: 0px solid transparent;
+  border-radius: 25px;
   flex: 1;
+  transition: all 0.2s;
 }
 
 .buttonStyle:hover {
   cursor: pointer;
-  border-radius: 25px;
-  border: 3px solid lightblue;
   height: 40px;
   width: 80px;
+  border: 2px solid lightblue;
 }
 
 .spaceDiv {
