--- a/frontend/src/components/Community.module.css
+++ b/frontend/src/components/Community.module.css
@@ -4,13 +4,13 @@
   height: 100%;
   width: 100%;
   flex-direction: column;
-  /* background-color: red; */
 }
 
 .contentDiv {
   display: flex;
   flex-wrap: wrap;
   margin-top: 24px;
+  position: relative;
   height: 100%;
   width: 100%;
   gap: 4px;
