--- a/frontend/src/pages/Login.module.css
+++ b/frontend/src/pages/Login.module.css
@@ -15,11 +15,13 @@
   width: 15rem;
   border-color: black;
   border: 1px solid;
+  transition: scale 0.25s;
 }
 
 .buttonLogIn:hover {
   cursor: pointer;
   background-color: darkblue;
+  scale: 1.1;
 }
 
 main {
@@ -65,7 +67,7 @@ Form {
   height: 80%;
   gap: 1rem;
   background-color: white;
-  padding: 8px;
+  padding: 16px;
   border-radius: 25px;
   border: 3px solid;
 }
@@ -84,4 +86,21 @@ Form {
   cursor: pointer;
   scale: 1.2;
   transition: all 0.25s ease-in-out;
+}
+
+.divText {
+  display: flex;
+  flex: 1;
+  justify-content: center;
+}
+
+.imgStyle {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
+.textStyle {
+  font-family: Roboto;
+  font-size: 40px;
 }
