--- a/frontend/src/pages/Login.module.css
+++ b/frontend/src/pages/Login.module.css
@@ -69,7 +69,7 @@ Form {
   background-color: white;
   padding: 16px;
   border-radius: 25px;
-  border: 3px solid;
+  border: 3px lightblue solid;
 }
 
 .createAccountButton {
